--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@wdio/allure-reporter": "^8.10.0",
-    "@wdio/cli": "^8.10.0",
-    "@wdio/local-runner": "^8.10.0",
-    "@wdio/mocha-framework": "^8.10.0",
-    "@wdio/spec-reporter": "^8.10.0",
+  "devDependencies": {
+    "@wdio/allure-reporter": "^8.26.3",
+    "@wdio/cli": "^8.26.3",
+    "@wdio/local-runner": "^8.26.3",
+    "@wdio/mocha-framework": "^8.26.3",
+    "@wdio/spec-reporter": "^8.26.3",
     "allure-commandline": "^2.22.0",
-    "chromedriver": "^120.0.0",
     "eslint": "^8.40.0",
     "eslint-plugin-wdio": "^8.8.7",
     "prettier": "2.8.8",
-    "wdio-chromedriver-service": "^8.1.1",
+    "wdio-docker-service": "^3.2.1",
     "wdio-wait-for": "^3.0.4",
     "webdriverio": "^8.26.3"
   }
